src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Accident_Investigation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accident Investigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accident_Reduction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accident Reduction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accident_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accident Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Industry_Sector__c</fullName>
        <label>Account Industry Sector</label>
        <picklist>
            <controllingField>Industry</controllingField>
            <picklistValues>
                <fullName>1.1: Farming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2: Forestry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.3: Fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1: Mines &amp; Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.1: Extraction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2: Quarrying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3: Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1: Textile &amp; Furnishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2: Clothing &amp; Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3: Leather &amp; Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.4: Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5: Other Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.6: Fabricated Metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.7: Paper &amp; Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.8: Chemical &amp; Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.9: Rubber &amp; Plastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.10: Print &amp; Reproduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.11: Comp. Elec. &amp; Optical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.12: Motor Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.13: Other Trans. Equip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.14: Machinery &amp; Equip.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.15: Basic Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.16: Mineral Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.17: Food Dairy Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.18: Beverage &amp; Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1: Coke &amp; Petroleum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.2: Pharma &amp; Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.1: Electricity Gen.&amp;Dist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2: Gas Supply &amp; Dist.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.3: Steam &amp; Aircon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Relationship__c</fullName>
        <label>Account Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Trader</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Revenue_Band__c</fullName>
        <formula>IF (ISBLANK(AnnualRevenue),
&quot;Unknown&quot;,
IF (AnnualRevenue &lt; 2000000, 
&quot;Micro&quot;, 
IF (AnnualRevenue &lt; 6500000, 
&quot;Small&quot;, 
IF (AnnualRevenue &lt; 30000000, 
&quot;Medium&quot;, 
&quot;Large&quot;))))</formula>
        <label>Account Revenue Band</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocated_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocated Area</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chemical_Safety__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chemical Safety</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Communication_Motivation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Communication and Motivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Start_Date__c</fullName>
        <inlineHelpText>The start date of the course the user wishes to book for</inlineHelpText>
        <label>Course Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Title__c</fullName>
        <inlineHelpText>The title of the course the user wishes to book.</inlineHelpText>
        <label>Course Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Venue__c</fullName>
        <inlineHelpText>The venue of the course which the customer wishes to book</inlineHelpText>
        <label>Course Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Campaign_Content__c</fullName>
        <label>DA Campaign Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Campaign_Medium__c</fullName>
        <label>DA Campaign Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Campaign_Name__c</fullName>
        <label>DA Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Campaign_Source__c</fullName>
        <label>DA Campaign Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Campaign_Term__c</fullName>
        <label>DA Campaign Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Referrer_Search__c</fullName>
        <label>DA Searched For</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Referrer_Website__c</fullName>
        <label>DA Came From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Session_ID__c</fullName>
        <label>DA Session ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Token__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DA Token</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_User_ID__c</fullName>
        <label>DA User ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Visit_Time__c</fullName>
        <label>DA Visit Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Visitor_Geolocation__c</fullName>
        <label>DA Visitor Geolocation</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Visitor_Landing_Page__c</fullName>
        <label>DA Landed On</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Visitor_Organisation__c</fullName>
        <label>DA ISP Listed As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Web_to_Lead_URL__c</fullName>
        <label>DA Form Submitted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_screen_equipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display screen equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disqual_Reason__c</fullName>
        <inlineHelpText>Custom field that tracks why this lead is lost</inlineHelpText>
        <label>Disqual/Archive Reason</label>
        <picklist>
            <picklistValues>
                <fullName>No Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never Reached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_health_Safety_training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Effective Health and Safety Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eletrical_Safety__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electrical Safety</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Site_Band__c</fullName>
        <formula>IF(
ISBLANK(NumberOfEmployees),
&quot;Unknown&quot;,
IF( 
NumberOfEmployees &lt; 10,&quot;Micro&quot;, 
IF( 
NumberOfEmployees &lt; 50, &quot;Small&quot;, 
IF( 
NumberOfEmployees &lt; 250, &quot;Medium&quot;, 
&quot;Large&quot;
) 
)
)
)</formula>
        <label>Employee Site Band</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environmental_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Environmental Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <description>Start date of the event the user wishes to book</description>
        <inlineHelpText>Start date of the event the user wishes to book</inlineHelpText>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Title__c</fullName>
        <description>Title of the event the user wishes to book</description>
        <inlineHelpText>Title of the event the user wishes to book</inlineHelpText>
        <label>Event Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Venue__c</fullName>
        <description>Venue of the event the user wishes to book</description>
        <inlineHelpText>Venue of the event the user wishes to book</inlineHelpText>
        <label>Event Venue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Auto_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this to exclude this Lead from Area Assignment</description>
        <label>Exclude from Auto Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>Date data expires as per licence agreement for data purchase</description>
        <inlineHelpText>Date data expires as per licence agreement for data purchase</inlineHelpText>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fire_Safety__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fire Safety Awareness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_and_Safety_Law__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Health and Safety Law</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_and_Safety_at_work_Act_1974__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Health and Safety at Work etc Act 1974</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integrate_With_Marketo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If enabled the Lead will be pushed to marketo for Marketing Automation</description>
        <inlineHelpText>If enabled the Lead will be pushed to marketo for Marketing Automation</inlineHelpText>
        <label>Integrate With Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Reason_Sub_Definition2_Lead__c</fullName>
        <description>Only to be used against Lost Reasons &quot;Location not Convenient&quot;, &quot;Service not Offered&quot;, &quot;Dates no Convenient&quot;</description>
        <label>Lost Reason Sub Definition2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Reason_Sub_Definition_Lead__c</fullName>
        <label>Lost Reason Sub Definition</label>
        <picklist>
            <controllingField>Lost_Reason__c</controllingField>
            <picklistValues>
                <fullName>£100&gt;£500 out of budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£500&gt;£1,000 out of budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£1,000&gt;£2,500 out of budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£2,500&gt;£5,000 out of budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£5,000&gt;£10,000 out of budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£10,000+ out of budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROSPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LRQA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bureau VERITAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Consultancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Santia (formerly Connaught)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IOSH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred E-Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred D-Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Un-contactable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not value for money/To expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gone to competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost cutting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company closed - In Liquidation/Administration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service not Offered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dates not Convenient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location not Convenient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Management_of_Health_and_Safety_at_work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Management of Health and Safety at Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Delegates__c</fullName>
        <inlineHelpText>the number of delegates the customers wishes to book on the course</inlineHelpText>
        <label>Number of Delegates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_attendees__c</fullName>
        <description>The number of delegates the customer wishes to book on the event</description>
        <inlineHelpText>The number of delegates the customer wishes to book on the event</inlineHelpText>
        <label>Number of attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Notes__c</fullName>
        <inlineHelpText>Populated by lead generation form.  Notes here will be inserted into opportunity if the lead is converted to an opportunity.</inlineHelpText>
        <label>Opportunity Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Originated_From__c</fullName>
        <defaultValue>&quot;User Created&quot;</defaultValue>
        <inlineHelpText>Which system or location this lead was created from for example: User Created, Online Contact Form, Online Booking Form etc.</inlineHelpText>
        <label>Originated From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP1__Country_Code__c</fullName>
        <formula>CASE(Country,
&quot;USA&quot;, &quot;US&quot;,
&quot;Canada&quot;, &quot;CA&quot;,
&quot;France&quot;, &quot;FR&quot;,
&quot;UK&quot;, &quot;GB&quot;,
&quot;Australia&quot;, &quot;AU&quot;,
&quot;Spain&quot;, &quot;ES&quot;,
&quot;Portugal&quot;, &quot;PT&quot;,
&quot;Italy&quot;, &quot;IT&quot;,
&quot;Germany&quot;, &quot;DE&quot;,
&quot;Sweden&quot;, &quot;SE&quot;,
&quot;Norway&quot;, &quot;NO&quot;,
&quot;Austria&quot;, &quot;AT&quot;,
&quot;Belgium&quot;,&quot;BE&quot;,
&quot;Denmark&quot;,&quot;DK&quot;,
&quot;Finland&quot;,&quot;FI&quot;,
&quot;Greece&quot;,&quot;GR&quot;,
&quot;Ireland&quot;,&quot;IE&quot;,
&quot;Netherlands&quot;,&quot;NL&quot;,
&quot;New Zealand&quot;,&quot;NZ&quot;,
&quot;Norway&quot;,&quot;NO&quot;,
&quot;Poland&quot;,&quot;PO&quot;,
&quot;Switzerland&quot;,&quot;CH&quot;,
&quot;England:Wales:Scotland:United Kingdom&quot;,&quot;GB&quot;,
&quot;GB&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_protective_equipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal protective equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Principle_Address_Area__c</fullName>
        <label>Principle Address: Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principle_Address_Building__c</fullName>
        <label>Principle Address: Building</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Principle_Address_City__c</fullName>
        <description>Address Field - Maps to Account on Conversion</description>
        <label>Principle Address: City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principle_Address_Country__c</fullName>
        <label>Principle Address: Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Principle_Address_Global_Region__c</fullName>
        <label>Principle Address: Global Region</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Principle_Address_State_Province__c</fullName>
        <label>Principle Address: State / Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principle_Address_Street__c</fullName>
        <description>Address Field - Maps to Account on Conversion</description>
        <inlineHelpText>Company Address</inlineHelpText>
        <label>Principle Address: Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Principle_Address_ZIP_Postal_Code__c</fullName>
        <description>Address Field - Maps to Account on Conversion</description>
        <label>Principle Address: ZIP / Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principles_of_manual_handling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Handling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recieve_Email_Newsletter__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Receive Email Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Risk Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Safety_of_work_equipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safe Use of work Equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Star_Rating__c</fullName>
        <formula>IMAGE(CASE( Rating, &quot;Very Cold&quot;, &quot;/img/samples/stars_100.gif&quot;, &quot;Cold&quot;, &quot;/img/samples/stars_200.gif&quot;, &quot;Warm&quot;, &quot;/img/samples/stars_300.gif&quot;,&quot;Hot&quot;, &quot;/img/samples/stars_400.gif&quot;,&quot;/img/samples/stars_500.gif&quot;),&quot;Rating&quot;)</formula>
        <inlineHelpText>This is a sample formula field that displays stars based on the lead&apos;s rating.</inlineHelpText>
        <label>Star Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <inlineHelpText>Populated by lead generation form.</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <inlineHelpText>Filled out by the user on the website contact form.</inlineHelpText>
        <label>Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit and consultancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy and opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News and events</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UAN__c</fullName>
        <description>This is the unique account identification number from data supplier</description>
        <inlineHelpText>This is the unique account identification number from data supplier</inlineHelpText>
        <label>UAN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USIN__c</fullName>
        <description>This is the unique contact identification number from data supplier</description>
        <inlineHelpText>This is the unique contact identification number from data supplier</inlineHelpText>
        <label>USIN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Fast_Forms_Auto_Assign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Forms Auto-Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Fast_Forms_Autoresponse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Forms Autoresponse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workforce_Consultation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workforce Consultation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workplace_safety__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workplace Safety</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>experianqas__Updated_Touchpoints_Timestamp__c</fullName>
        <label>Updated Touchpoints Timestamp</label>
        <type>DateTime</type>
    </fields>
</CustomObject>